tests/trybuild/compile_fail/may_dangle/mut_bump_vec_rev.stderr
error[E0597]: `s` does not live long enough
  --> tests/trybuild/compile_fail/may_dangle/mut_bump_vec_rev.rs:22:24
   |
21 |     let s = String::from("hello");
   |         - binding `s` declared here
22 |     v.push(PrintOnDrop(&s));
   |                        ^^ borrowed value does not live long enough
23 | }
   | -
   | |
   | `s` dropped here while still borrowed
   | borrow might be used here, when `v` is dropped and runs the `Drop` code for type `MutBumpVecRev`
   |
   = note: values in a scope are dropped in the opposite order they are defined
